image preview added and text overflow fixed

--- a/src/style.scss
+++ b/src/style.scss
@@ -197,6 +197,11 @@
             p {
               font-size: 14px;
               color: lightgray;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              // TODO: Fix the width
+              max-width: 200px;
+              white-space: nowrap;
             }
           }
         }
@@ -234,16 +239,16 @@
           .date{
             text-align: center;
             position: sticky;
-            top: 10px;
+            top: 0;
             margin: 10px 0;
             font-size: .9rem;
 
             span{
-              background-color: #ddddf7;
-              color: #7a7a7a;
-              padding: 4px;
+              background: #636f83;
+              color: #d4d4d4;
               border-radius: 6px;
-              box-shadow: 0 0 8px #4e4e4e;
+              box-shadow: 0 0 8px #a2a2a2;
+              padding: 4px;
             }
           }
 
@@ -269,13 +274,20 @@
               max-width: 80%;
               display: flex;
               flex-direction: column;
-              gap: 10px;
-  
+              // gap: 10px;
+              
               p {
                 background-color: white;
+                word-break: break-all;
                 padding: 10px 20px;
                 border-radius: 0px 10px 10px 10px;
-                max-width: max-content;
+                // max-width: max-content;
+                box-sizing: border-box;
+              }
+
+              &:has(img) p{
+                border-radius: 0 0 10px 10px !important;
+                width: 50%;
               }
   
               img {
@@ -287,6 +299,7 @@
                 display: block;
                 font-size: .7rem;
                 margin-top: 2px;
+                text-align: left;
               }
             }
   
@@ -295,6 +308,7 @@
   
               .messageContent {
                 align-items: flex-end;
+                
                 p {
                   background-color: #59699e;
                   color: white;
@@ -303,6 +317,7 @@
 
                 .time{
                   color: #d9d9d9;
+                  text-align: right;
                 }
               }
             }
@@ -313,10 +328,58 @@
           height: 50px;
           background-color: white;
           padding: 10px;
+          position: relative;
           display: flex;
           align-items: center;
           justify-content: space-between;
-  
+          
+          .image-selected{
+            position: absolute;
+            bottom: 100%;
+            box-sizing: border-box;
+            padding: 1rem;
+            left: 0%;
+            background: #ffffff;
+            width: 100%;
+            height: 300px;
+
+            img{
+              width: 100%;
+              height: 100%;
+              object-fit: contain;
+            }
+
+            .remove{
+              cursor: pointer;
+              position: absolute;
+              top: 10px;
+              right: 10px;
+              opacity: 0.6;
+              width: 22px;
+              height: 22px;
+              transition: opacity .2s;
+
+              &:hover {
+                opacity: 1;
+              }
+
+              &:before, &:after {
+                position: absolute;
+                left: 0;
+                content: ' ';
+                height: 25px;
+                width: 3px;
+                background-color: #333;
+              }
+              &:before {
+                transform: rotate(45deg);
+              }
+              &:after {
+                transform: rotate(-45deg);
+              }
+            }
+          }
+
           input {
             width: 100%;
             border: none;
